--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <button
             class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha"
             data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true"
-            data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filter</button>
+            data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filtrar</button>
           <ul class="isotope-filters-list" id="isotope-3">
             <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">Todos</a></li>
             <li><a href="#" data-isotope-filter="Type 1" data-isotope-group="gallery">Mobile Apps</a></li>
