--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
   <!-- Javascript-->
   <script src="js/core.min.js"></script>
   <script src="js/script.js"></script>
-  <!-- coded by Himic-->
+  <!-- coded by Wisley-->
 </body>
 
 </html>
