Commit: Subst da logo EC; Alt de textos.

--- a/index.html
+++ b/index.html
@@ -409,28 +409,28 @@
             <div class="row justify-content-center border-2-column offset-top-xl-26">
               <div class="col-9 col-sm-6">
                 <div class="counter-amy">
-                  <div class="counter-amy-number"><span class="counter">04</span>
+                  <div class="counter-amy-number"><span class="counter">4</span>
                   </div>
                   <h6 class="counter-amy-title">apps desenvolvidos</h6>
                 </div>
               </div>
               <div class="col-9 col-sm-6">
                 <div class="counter-amy">
-                  <div class="counter-amy-number"><span class="counter">40</span>
+                  <div class="counter-amy-number"><h1>+</h1><span class="counter">40</span>
                   </div>
                   <h6 class="counter-amy-title">dashboards</h6>
                 </div>
               </div>
               <div class="col-9 col-sm-6">
                 <div class="counter-amy">
-                  <div class="counter-amy-number"><span class="counter">12</span>
+                  <div class="counter-amy-number"><h1>+</h1><span class="counter">12</span>
                   </div>
                   <h6 class="counter-amy-title">Projetos</h6>
                 </div>
               </div>
               <div class="col-9 col-sm-6">
                 <div class="counter-amy">
-                  <div class="counter-amy-number"><span class="counter">08</span>
+                  <div class="counter-amy-number"><h1>+</h1><span class="counter">15</span>
                   </div>
                   <h6 class="counter-amy-title">Chat Bots</h6>
                 </div>
@@ -658,7 +658,7 @@
             <div class="box-pricing box-pricing-black">
               <div class="box-pricing-body">
                 <h5 class="box-pricing-title">Ultimate</h5>
-                <h3 class="box-pricing-price">$0000.00</h3>
+                <h3 class="box-pricing-price">$000.00</h3>
                 <div class="box-pricing-time">comece agora</div>
                 <div class="box-pricing-divider">
                   <div class="divider"></div><span>Ultimate</span>
