Commit: Alterações de formatação; Botão do Easy add.

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <section class="section section-sm section-fluid bg-default text-center" id="projects">
       <div class="container-fluid">
         <h2 class="wow fadeInLeft">Meus Projetos</h2>
-        <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">Este é meu portfólio, você pode navegar pelos mais
+        <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">Este é meu portfólio. Você pode navegar pelos mais
           recentes produtos desenvolvidos para os meus clientes com diferentes finalidades corporativas. Projetando os
           melhores designs de interface e desenvolvimento de software, estou sempre pronto para criar algo único para
           você.</p>
@@ -400,7 +400,7 @@
           <div class="col-sm-8 col-md-6 col-lg-5 col-xl-4">
             <div class="text-width-extra-small offset-top-lg-24 wow fadeInUp">
               <h3 class="title-decoration-lines-left">Anos de experiência</h3>
-              <p class="text-gray-500">Com conhecimento de design e desenvolvimento de aplicativos de alta
+              <p class="text-gray-500">Com conhecimento de design e desenvolvimento de aplicações (mobile e desktop) de alta
                 qualidade, plenamente capaz de criar um software exclusivo para você.</p><a
                 class="button button-secondary button-pipaluk" href="#">Vamos lá</a>
             </div>
@@ -588,16 +588,13 @@
                       src="images/user-20-75x75.png" alt="" width="75" height="75" /></a></div>
                 <div class="unit-body">
                   <h4 class="quote-modern-cite"><a href="#">EasyConnect</a></h4>
-                  <p class="quote-modern-status">Privado</p>
+                  <p class="quote-modern-status">Start-up</p>
                 </div>
               </div>
               <div class="quote-modern-text">
-                <p class="q">Em 2021, criei o EasyConnect. Uma aplicação mobile para dispositivos Android voltado
-                  para empresas de contabilidade. O mesmo é capaz de automatizar processos (antes realizados
-                  manualmente) e encurtar tempo de processos antes demorados. A patente do mesmo foi efetivada no mesmo
-                  ano.
-                </p>
-              </div>
+                <p class="q">Em 2021, criei o EasyConnect. Uma start-up que oferece um sistema de gerenciamento
+                  e automatização voltado para empresas de contabilidade.</p><a
+                  class="button button-secondary button-pipaluk" href="https://easyconnectapp.github.io/easy/">Conhecer</a>
             </article>
           </div>
         </div>
