Commit: Botões do Phast e Physiocode add

--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
               <div class="quote-modern-text">
                 <p class="q">Em 2018, tive o prazer de trabalhar na PhysioCode, uma Start-up conhecida da área da saúde.
                   Esta tinha como objetivo a criação de uma aplicação mobile e de dispositivos eletrônicos que fossem
-                  capazes de agilizar processos de avaliação em pacientes por diversos profissionais da saúde.
-                </p>
+                  capazes de agilizar processos de avaliação em pacientes por diversos profissionais da saúde.</p><a
+                  class="button button-secundary button-pipaluk" href="https://www.physiocode.com.br/">Conhecer</a>
               </div>
             </article>
           </div>
@@ -572,11 +572,9 @@
               </div>
               <div class="quote-modern-text">
                 <p class="q">Se este nome não lhe é estranho, talves você tenha visto a PhastApp no Sharck Tank Brasil
-                  em
-                  2021. Tive a honra de trabalhar com a equipe Phast de 2019 a 2021. Elaborei coletas e tabulação de
-                  dados
-                  que tornaram o funcionamento da aplicação deles possível.
-                </p>
+                  em 2021. Tive a honra de trabalhar com a equipe Phast de 2019 a 2021. Elaborei coletas e tabulação de
+                  dados que tornaram o funcionamento da aplicação deles possível.</p><a
+                  class="button button-secondary button-pipaluk" href="https://phast.com.br/">Conhecer</a>
               </div>
             </article>
           </div>
