--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 <p class="q">Em 2018, tive o prazer de trabalhar na PhysioCode, uma Start-up conhecida da área da saúde.
                   Esta tinha como objetivo a criação de uma aplicação mobile e de dispositivos eletrônicos que fossem
                   capazes de agilizar processos de avaliação em pacientes por diversos profissionais da saúde.</p><a
-                  class="button button-secundary button-pipaluk" href="https://www.physiocode.com.br/">Conhecer</a>
+                  class="button button-secondary button-pipaluk" href="https://www.physiocode.com.br/">Conhecer</a>
               </div>
             </article>
           </div>
