Commit: Remoção do Linkedin por apresentar bugs

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">Desenvolvimento</h1>
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">Desenvolvimento
                   de aplicações mobile, desktop e website. Tenha uma ideia, eu me encarrego de transformá-la em
-                  realidade! ;)</p><a class="button button-primary button-ujarak" href="encurtador.com.br/fjDOR" data-toggle="modal"
+                  realidade! ;)</p><a class="button button-primary button-ujarak" href="#" data-toggle="modal"
                   data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
               </div>
             </div>
@@ -114,7 +114,7 @@
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">Sou um
                   desenvolvedor
                   de software qualificado, visando a criação de ferramentas exclusivas e poderosas para o seu negócio e
-                  vida cotidiana.</p><a class="button button-primary button-ujarak" href="encurtador.com.br/fjDOR" data-toggle="modal"
+                  vida cotidiana.</p><a class="button button-primary button-ujarak" href="#" data-toggle="modal"
                   data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
               </div>
             </div>
@@ -126,7 +126,7 @@
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">Minhas
                   aplicações visam atender as necessidades do usuário e automatizar processos complexos, poupando tempo
                   do mesmo.
-                </p><a class="button button-primary button-ujarak" href="encurtador.com.br/fjDOR" data-toggle="modal"
+                </p><a class="button button-primary button-ujarak" href="#" data-toggle="modal"
                   data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
               </div>
             </div>
@@ -206,8 +206,8 @@
                 <h3 class="wow fadeInLeft">Posso desenvolver seu próprio software!</h3>
                 <p>Você precisa de uma solução de software exclusiva para sua empresa? Eu sei como te ajudar!</p>
                 <div class="group-sm group-middle group justify-content-end"><a
-                    class="button button-primary button-ujarak" href="encurtador.com.br/guwAU" data-toggle="modal">Vamos lá!</a><a
-                    class="button button-white-outline button-ujarak" href="encurtador.com.br/fjDOR">Saber mais</a></div>
+                    class="button button-primary button-ujarak" href="#" data-toggle="modal">Vamos lá!</a><a
+                    class="button button-white-outline button-ujarak" href="#">Saber mais</a></div>
               </div>
             </div>
           </div>
@@ -416,21 +416,21 @@
               </div>
               <div class="col-9 col-sm-6">
                 <div class="counter-amy">
-                  <div class="counter-amy-number"><h1>+</h1><span class="counter">40</span>
+                  <div class="counter-amy-number"><h3>+</h3><span class="counter">40</span>
                   </div>
                   <h6 class="counter-amy-title">dashboards</h6>
                 </div>
               </div>
               <div class="col-9 col-sm-6">
                 <div class="counter-amy">
-                  <div class="counter-amy-number"><h1>+</h1><span class="counter">12</span>
+                  <div class="counter-amy-number"><h3>+</h3><span class="counter">12</span>
                   </div>
                   <h6 class="counter-amy-title">Projetos</h6>
                 </div>
               </div>
               <div class="col-9 col-sm-6">
                 <div class="counter-amy">
-                  <div class="counter-amy-number"><h1>+</h1><span class="counter">15</span>
+                  <div class="counter-amy-number"><h3>+</h3><span class="counter">15</span>
                   </div>
                   <h6 class="counter-amy-title">Chat Bots</h6>
                 </div>
@@ -490,15 +490,15 @@
                   <p>Você já procurou por um app capaz de atender uma demanda específica e não encontrou?
                     Eu posso cria-lo e entrega-lo em suas mãos, seja para Android ou IOS.
                   </p>
-                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="encurtador.com.br/fjDOR"
-                      data-toggle="modal">LinkedIn</a><a class="button button-default-outline button-wapasha"
+                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" data-toggle="modal"
+                    href="#">LinkedIn</a><a class="button button-default-outline button-wapasha"
                       href="https://www.instagram.com/ribeiro.exe/">Instagram</a></div>
                 </div>
                 <div class="tab-pane fade" id="tabs-6-2">
                   <h5 class="font-weight-normal">SOCIALIZE</h5>
                   <p>Cada aplicativo que desenvolvo possui suporte social integrado que permite que você
                     permaneça conectado às suas contas no Facebook, Instagram, Twitter e outras redes.</p>
-                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="encurtador.com.br/fjDOR"
+                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="#"
                       data-toggle="modal">LinkedIn</a><a class="button button-default-outline button-wapasha"
                       href="https://www.instagram.com/ribeiro.exe/">Instagram</a></div>
                 </div>
@@ -506,7 +506,7 @@
                   <h5 class="font-weight-normal">SUPORTE</h5>
                   <p>Cada um dos meus clientes podem ter acesso ao suporte amigável e qualificado 24 horas
                     por dia, 7 dias por semana, via chat ou telefone. Sinta-se livre para tirar qualquer dúvida!</p>
-                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="encurtador.com.br/fjDOR"
+                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="#"
                       data-toggle="modal">LinkedIn</a><a class="button button-default-outline button-wapasha"
                       href="https://www.instagram.com/ribeiro.exe/">Instagram</a></div>
                 </div>
@@ -515,7 +515,7 @@
                   <p>Todos os aplicativos são projetados para ter uma ótima usabilidade. Interfaces intuitivas, bonitas
                     e objetivas!
                   </p>
-                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="encurtador.com.br/fjDOR"
+                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="#"
                       data-toggle="modal">LinkedIn</a><a class="button button-default-outline button-wapasha"
                       href="https://www.instagram.com/ribeiro.exe/">Instagram</a></div>
                 </div>
@@ -538,14 +538,32 @@
     <!-- What people Say-->
     <section class="section section-sm section-bottom-70 section-fluid bg-default">
       <div class="container-fluid">
-        <h2>Pra quem já trabalhei?</h2>
+        <h2>Start-Ups</h2>
         <div class="row row-50 row-sm">
           <div class="col-md-6 col-xl-4 wow fadeInRight">
             <!-- Quote Modern-->
             <article class="quote-modern quote-modern-custom">
               <div class="unit unit-spacing-md align-items-center">
-                <div class="unit-left"><a class="quote-modern-figure" href="https://easyconnectapp.github.io/easy/"><img class="img-circles"
+                <div class="unit-left"><a class="quote-modern-figure" href="https://phast.com.br/"><img class="img-circles"
                       src="images/user-11-75x75.png" alt="" width="75" height="75" /></a></div>
+                <div class="unit-body">
+                  <h4 class="quote-modern-cite"><a href="https://phast.com.br/">PhastApp</a></h4>
+                  <p class="quote-modern-status">Start-up</p>
+                </div>
+              </div>
+              <div class="quote-modern-text">
+                <p class="q">Uma poderosa Start-Up qye possui uma aplicação mobile (Android/IOS). 
+                  Elaborei coletas e tabulação de dados que tornaram o funcionamento da aplicação possível.</p><a
+                  class="button button-default-outline button-wapasha" href="https://phast.com.br/">Conhecer</a>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-6 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
+            <!-- Quote Modern-->
+            <article class="quote-modern quote-modern-custom">
+              <div class="unit unit-spacing-md align-items-center">
+                <div class="unit-left"><a class="quote-modern-figure" href="https://easyconnectapp.github.io/easy/"><img class="img-circles"
+                      src="images/user-12-75x75.png" alt="" width="75" height="75" /></a></div>
                 <div class="unit-body">
                   <h4 class="quote-modern-cite"><a href="https://easyconnectapp.github.io/easy/">EasyConnect</a></h4>
                   <p class="quote-modern-status">Start-up</p>
@@ -555,24 +573,6 @@
                 <p class="q">Em 2021, criei o EasyConnect. Uma start-up que oferece um sistema de gerenciamento
                   e automatização voltado para empresas de contabilidade.</p><a
                   class="button button-secondary button-pipaluk" href="https://easyconnectapp.github.io/easy/">Conhecer</a>
-              </div>
-            </article>
-          </div>
-          <div class="col-md-6 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
-            <!-- Quote Modern-->
-            <article class="quote-modern quote-modern-custom">
-              <div class="unit unit-spacing-md align-items-center">
-                <div class="unit-left"><a class="quote-modern-figure" href="https://phast.com.br/"><img class="img-circles"
-                      src="images/user-12-75x75.png" alt="" width="75" height="75" /></a></div>
-                <div class="unit-body">
-                  <h4 class="quote-modern-cite"><a href="https://phast.com.br/">PhastApp</a></h4>
-                  <p class="quote-modern-status">Start-up</p>
-                </div>
-              </div>
-              <div class="quote-modern-text">
-                <p class="q">Uma poderosa Start-Up qye possui uma aplicação mobile (Android/IOS). 
-                  Elaborei coletas e tabulação de dados que tornaram o funcionamento da aplicação possível.</p><a
-                  class="button button-pipaluk" href="https://phast.com.br/">Conhecer</a>
               </div>
             </article>
           </div>
@@ -590,7 +590,7 @@
               <div class="quote-modern-text">
                 <p class="q">Uma Start-up conhecida da área da saúde que tinha como objetivo a criação de uma aplicação 
                   capaz de agilizar processos de avaliação em pacientes por diversos profissionais da saúde.</p><a
-                  class="button button-pipaluk" href="https://www.physiocode.com.br/">Conhecer</a>
+                  class="button button-default-outline button-wapasha" href="https://www.physiocode.com.br/">Conhecer</a>
             </article>
           </div>
         </div>
@@ -681,8 +681,8 @@
               <div class="box-contacts-body">
                 <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
                 <div class="box-contacts-decor"></div>
-                <p class="box-contacts-link"><a href="encurtador.com.br/guwAU">+55 31 9 9945-5746</a></p>
-                <p class="box-contacts-link"><a href="encurtador.com.br/fimDY">+55 11 9 6903-0326</a></p>
+                <p class="box-contacts-link"><a href="tel:31 9 99455746">+55 31 9 9945-5746</a></p>
+                <p class="box-contacts-link"><a href="tel:11 9 69030326">+55 11 9 6903-0326</a></p>
               </div>
             </article>
           </div>
