--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="wide wow-animation" lang="pt">
+<html class="wide wow-animation" lang="pt-BR">
 
 <head>
   <title>Wisley Ribeiro</title>
