--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
                     <!-- RD Navbar Share-->
                     <div class="rd-navbar-share fl-bigmug-line-share27" data-rd-navbar-toggle=".rd-navbar-share-list">
                       <ul class="list-inline rd-navbar-share-list">
-                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-facebook" href="#"></a></li>
-                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-twitter" href="#"></a></li>
-                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-google-plus" href="#"></a></li>
-                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-instagram" href="#"></a></li>
+
+                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-whatsapp" title="WhatsApp"
+                          href="https://shre.ink/Pyk" target="_blank"></a></li>
+
+                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-instagram" title="Instagram"
+                           href="#" target="_blank"></a></li>
+
+                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-facebook" title="Facebook"
+                           href="https://shre.ink/Pyo" target="_blank"></a></li>
                       </ul>
                     </div>
                     <ul class="rd-navbar-nav">
@@ -102,8 +107,8 @@
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">Desenvolvimento</h1>
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">Desenvolvimento
                   de aplicações mobile, desktop e website. Tenha uma ideia, eu me encarrego de transformá-la em
-                  realidade! ;)</p><a class="button button-primary button-ujarak" href="#" data-toggle="modal"
-                  data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
+                  realidade! ;)</p><a class="button button-primary button-ujarak" href="http://www.linkedin.com/in/wisley-ribeiro-lopes"
+                  target="_blank" data-caption-animate="fadeInUp" data-caption-delay="100">Saiba mais</a>
               </div>
             </div>
           </div>
@@ -114,8 +119,8 @@
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">Sou um
                   desenvolvedor
                   de software qualificado, visando a criação de ferramentas exclusivas e poderosas para o seu negócio e
-                  vida cotidiana.</p><a class="button button-primary button-ujarak" href="#" data-toggle="modal"
-                  data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
+                  vida cotidiana.</p><a class="button button-primary button-ujarak" href="http://www.linkedin.com/in/wisley-ribeiro-lopes"
+                   target="_blank" data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
               </div>
             </div>
           </div>
@@ -126,8 +131,8 @@
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">Minhas
                   aplicações visam atender as necessidades do usuário e automatizar processos complexos, poupando tempo
                   do mesmo.
-                </p><a class="button button-primary button-ujarak" href="#" data-toggle="modal"
-                  data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
+                </p><a class="button button-primary button-ujarak" href="http://www.linkedin.com/in/wisley-ribeiro-lopes" 
+                target="_blank" data-caption-animate="fadeInUp" data-caption-delay="100">Saiba mais</a>
               </div>
             </div>
           </div>
@@ -206,8 +211,9 @@
                 <h3 class="wow fadeInLeft">Posso desenvolver seu próprio software!</h3>
                 <p>Você precisa de uma solução de software exclusiva para sua empresa? Eu sei como te ajudar!</p>
                 <div class="group-sm group-middle group justify-content-end"><a
-                    class="button button-primary button-ujarak" href="#" data-toggle="modal">Vamos lá!</a><a
-                    class="button button-white-outline button-ujarak" href="#">Saber mais</a></div>
+                    class="button button-primary button-ujarak" href="https://abrir.link/UmcBU" target="_blank">Vamos lá!</a><a
+                    class="button button-white-outline button-ujarak" href="http://www.linkedin.com/in/wisley-ribeiro-lopes"
+                    target="_blank">Saber mais</a></div>
               </div>
             </div>
           </div>
@@ -402,7 +408,8 @@
               <h3 class="title-decoration-lines-left">Anos de experiência</h3>
               <p class="text-gray-500">Com conhecimento de design e desenvolvimento de aplicações (mobile e desktop) de alta
                 qualidade, plenamente capaz de criar um software exclusivo para você.</p><a
-                class="button button-secondary button-pipaluk" href="#">Vamos lá</a>
+                class="button button-secondary button-pipaluk" href="https://abrir.link/UmcBU"
+                target="_blank">Vamos lá</a>
             </div>
           </div>
           <div class="col-sm-10 col-md-8 col-lg-6 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
@@ -490,34 +497,41 @@
                   <p>Você já procurou por um app capaz de atender uma demanda específica e não encontrou?
                     Eu posso cria-lo e entrega-lo em suas mãos, seja para Android ou IOS.
                   </p>
-                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" data-toggle="modal"
-                    href="#">LinkedIn</a><a class="button button-default-outline button-wapasha"
-                      href="https://www.instagram.com/ribeiro.exe/">Instagram</a></div>
+                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk"
+                    href="http://www.linkedin.com/in/wisley-ribeiro-lopes" target="_blank">LinkedIn</a>
+
+                    <a class="button button-default-outline button-wapasha"
+                      href="https://www.instagram.com/ribeiro.exe/" target="_blank">Instagram</a></div>
                 </div>
                 <div class="tab-pane fade" id="tabs-6-2">
                   <h5 class="font-weight-normal">SOCIALIZE</h5>
                   <p>Cada aplicativo que desenvolvo possui suporte social integrado que permite que você
                     permaneça conectado às suas contas no Facebook, Instagram, Twitter e outras redes.</p>
-                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="#"
-                      data-toggle="modal">LinkedIn</a><a class="button button-default-outline button-wapasha"
-                      href="https://www.instagram.com/ribeiro.exe/">Instagram</a></div>
+                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk"
+                    href="http://www.linkedin.com/in/wisley-ribeiro-lopes" target="_blank">LinkedIn</a>
+
+                      <a class="button button-default-outline button-wapasha"
+                      href="https://www.instagram.com/ribeiro.exe/" target="_blank">Instagram</a></div>
                 </div>
                 <div class="tab-pane fade" id="tabs-6-3">
                   <h5 class="font-weight-normal">SUPORTE</h5>
                   <p>Cada um dos meus clientes podem ter acesso ao suporte amigável e qualificado 24 horas
                     por dia, 7 dias por semana, via chat ou telefone. Sinta-se livre para tirar qualquer dúvida!</p>
-                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="#"
-                      data-toggle="modal">LinkedIn</a><a class="button button-default-outline button-wapasha"
-                      href="https://www.instagram.com/ribeiro.exe/">Instagram</a></div>
+                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk"
+                    href="http://www.linkedin.com/in/wisley-ribeiro-lopes" target="_blank">LinkedIn</a>
+                    
+                    <a class="button button-default-outline button-wapasha"
+                      href="https://www.instagram.com/ribeiro.exe/" target="_blank">Instagram</a></div>
                 </div>
                 <div class="tab-pane fade" id="tabs-6-4">
                   <h5 class="font-weight-normal">USABILIDADE</h5>
                   <p>Todos os aplicativos são projetados para ter uma ótima usabilidade. Interfaces intuitivas, bonitas
-                    e objetivas!
-                  </p>
-                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk" href="#"
-                      data-toggle="modal">LinkedIn</a><a class="button button-default-outline button-wapasha"
-                      href="https://www.instagram.com/ribeiro.exe/">Instagram</a></div>
+                    e objetivas!</p>
+                  <div class="group-sm group-middle"><a class="button button-secondary button-pipaluk"
+                    href="http://www.linkedin.com/in/wisley-ribeiro-lopes" target="_blank">LinkedIn</a>
+
+                    <a class="button button-default-outline button-wapasha"
+                      href="https://www.instagram.com/ribeiro.exe/" target="_blank">Instagram</a></div>
                 </div>
               </div>
             </div>
@@ -544,17 +558,17 @@
             <!-- Quote Modern-->
             <article class="quote-modern quote-modern-custom">
               <div class="unit unit-spacing-md align-items-center">
-                <div class="unit-left"><a class="quote-modern-figure" href="https://phast.com.br/"><img class="img-circles"
-                      src="images/user-11-75x75.png" alt="" width="75" height="75" /></a></div>
-                <div class="unit-body">
-                  <h4 class="quote-modern-cite"><a href="https://phast.com.br/">PhastApp</a></h4>
+                <div class="unit-left"><a class="quote-modern-figure" href="https://phast.com.br/" target="_blank">
+                  <img class="img-circles" src="images/user-11-75x75.png" alt="" width="75" height="75" /></a></div>
+                <div class="unit-body"> <h4 class="quote-modern-cite">
+                  <a href="https://phast.com.br/" target="_blank">PhastApp</a></h4>
                   <p class="quote-modern-status">Start-up</p>
                 </div>
               </div>
               <div class="quote-modern-text">
                 <p class="q">Uma poderosa Start-Up qye possui uma aplicação mobile (Android/IOS). 
                   Elaborei coletas e tabulação de dados que tornaram o funcionamento da aplicação possível.</p><a
-                  class="button button-default-outline button-wapasha" href="https://phast.com.br/">Conhecer</a>
+                  class="button button-default-outline button-wapasha" href="https://phast.com.br/" target="_blank">Conhecer</a>
               </div>
             </article>
           </div>
@@ -562,17 +576,18 @@
             <!-- Quote Modern-->
             <article class="quote-modern quote-modern-custom">
               <div class="unit unit-spacing-md align-items-center">
-                <div class="unit-left"><a class="quote-modern-figure" href="https://easyconnectapp.github.io/easy/"><img class="img-circles"
+                <div class="unit-left"><a class="quote-modern-figure" href="https://easyconnectapp.github.io/easy/" target="_blank">
+                  <img class="img-circles"
                       src="images/user-12-75x75.png" alt="" width="75" height="75" /></a></div>
-                <div class="unit-body">
-                  <h4 class="quote-modern-cite"><a href="https://easyconnectapp.github.io/easy/">EasyConnect</a></h4>
+                <div class="unit-body"> <h4 class="quote-modern-cite">
+                  <a href="https://easyconnectapp.github.io/easy/" target="_blank">EasyConnect</a></h4>
                   <p class="quote-modern-status">Start-up</p>
                 </div>
               </div>
               <div class="quote-modern-text">
                 <p class="q">Em 2021, criei o EasyConnect. Uma start-up que oferece um sistema de gerenciamento
                   e automatização voltado para empresas de contabilidade.</p><a
-                  class="button button-secondary button-pipaluk" href="https://easyconnectapp.github.io/easy/">Conhecer</a>
+                  class="button button-secondary button-pipaluk" href="https://easyconnectapp.github.io/easy/" target="_blank">Conhecer</a>
               </div>
             </article>
           </div>
@@ -580,17 +595,17 @@
             <!-- Quote Modern-->
             <article class="quote-modern quote-modern-custom">
               <div class="unit unit-spacing-md align-items-center">
-                <div class="unit-left"><a class="quote-modern-figure" href="https://www.physiocode.com.br/"><img class="img-circles"
-                      src="images/user-20-75x75.png" alt="" width="75" height="75" /></a></div>
-                <div class="unit-body">
-                  <h4 class="quote-modern-cite"><a href="https://www.physiocode.com.br/">PhysioCode</a></h4>
+                <div class="unit-left"><a class="quote-modern-figure" href="https://www.physiocode.com.br/" target="_blank">
+                  <img class="img-circles" src="images/user-20-75x75.png" alt="" width="75" height="75" /></a></div>
+                <div class="unit-body"> <h4 class="quote-modern-cite">
+                  <a href="https://www.physiocode.com.br/" target="_blank">PhysioCode</a></h4>
                   <p class="quote-modern-status">Start-up</p>
                 </div>
               </div>
               <div class="quote-modern-text">
                 <p class="q">Uma Start-up conhecida da área da saúde que tinha como objetivo a criação de uma aplicação 
                   capaz de agilizar processos de avaliação em pacientes por diversos profissionais da saúde.</p><a
-                  class="button button-default-outline button-wapasha" href="https://www.physiocode.com.br/">Conhecer</a>
+                  class="button button-default-outline button-wapasha" href="https://www.physiocode.com.br/" target="_blank">Conhecer</a>
             </article>
           </div>
         </div>
@@ -681,8 +696,10 @@
               <div class="box-contacts-body">
                 <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
                 <div class="box-contacts-decor"></div>
-                <p class="box-contacts-link"><a href="tel:31 9 99455746">+55 31 9 9945-5746</a></p>
-                <p class="box-contacts-link"><a href="tel:11 9 69030326">+55 11 9 6903-0326</a></p>
+                <p class="box-contacts-link"><a href="https://abrir.link/UmcBU" target="_blank">+55 31 9 9945-5746</a></p>
+                <p class="box-contacts-link"><a href="https://abrir.link/1y71K" target="_blank">+55 11 9 6903-0326</a></p>
+                <p class="box-contacts-link"><a class="icon fa fa-whatsapp"
+                  href="https://abrir.link/UmcBU" target="_blank"></a></p>
               </div>
             </article>
           </div>
