Commit: Links nas imagens das redes adicionadas; links nos icones de rodapé

--- a/index.html
+++ b/index.html
@@ -538,11 +538,11 @@
           </div>
           <div class="col-lg-6 text-center wow fadeInUp" data-wow-delay=".1s">
             <div class="owl-carousel owl-style-1" data-items="2" data-stage-padding="0" data-loop="true" data-margin="0"
-              data-mouse-drag="true" data-autoplay="true"><a class="box-device" href="#"><img
-                  src="images/index-4-313x580.png" alt="" width="313" height="580" /></a><a class="box-device"
-                href="#"><img src="images/index-5-313x580.png" alt="" width="313" height="580" /></a><a
-                class="box-device" href="#"><img src="images/index-4-313x580.png" alt="" width="313"
-                  height="580" /></a><a class="box-device" href="#"><img src="images/index-5-313x580.png" alt=""
+              data-mouse-drag="true" data-autoplay="true"><a class="box-device" href="http://www.linkedin.com/in/wisley-ribeiro-lopes" 
+              target="_blank"><img src="images/index-4-313x580.png" alt="" width="313" height="580" /></a><a class="box-device"
+                href="https://www.instagram.com/ribeiro.exe/" target="_blank"><img src="images/index-5-313x580.png" alt="" width="313" height="580" /></a><a
+                class="box-device" href="http://www.linkedin.com/in/wisley-ribeiro-lopes" target="_blank"><img src="images/index-4-313x580.png" alt="" width="313"
+                  height="580" /></a><a class="box-device" href="https://www.instagram.com/ribeiro.exe/" target="_blank"><img src="images/index-5-313x580.png" alt=""
                   width="313" height="580" /></a></div>
           </div>
         </div>
@@ -708,7 +708,7 @@
               <div class="box-contacts-body">
                 <div class="box-contacts-icon fl-bigmug-line-up104"></div>
                 <div class="box-contacts-decor"></div>
-                <p class="box-contacts-link"><a href="#">Belo Horizonte</a></p>
+                <p class="box-contacts-link"><a href="https://www.google.com/maps" target="_blank">Belo Horizonte</a></p>
               </div>
             </article>
           </div>
@@ -794,8 +794,8 @@
                   <ul class="list-inline list-inline-sm footer-social-list-2">
                     <li><a class="icon fa fa-facebook" href="#"></a></li>
                     <li><a class="icon fa fa-twitter" href="#"></a></li>
-                    <li><a class="icon fa fa-google-plus" href="#"></a></li>
-                    <li><a class="icon fa fa-instagram" href="#"></a></li>
+                    <li><a class="icon fa fa-instagram" href="https://www.instagram.com/ribeiro.exe/" 
+                      target="_blank"></a></li>
                   </ul>
                 </div>
               </div>
