Commit: Pequenas atualizações e otimizações

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <body>
   <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img
         src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820"
-        alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a>
+        alt="Você esta usando um navegador desatualizado. Para uma experiência de navegação mais
+        rápida e segura, atualize gratuitamente hoje mesmo."></a>
   </div>
   <div class="preloader">
     <div class="preloader-body">
