--- a/index.html
+++ b/index.html
@@ -447,16 +447,19 @@
           </div>
           <div class="col-lg-6 col-xl-12 align-self-center">
             <div class="row row-30 justify-content-center">
-              <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft"><a class="clients-classic" href="#"><img
-                    src="images/clients-9-270x117.png" alt="" width="270" height="117" /></a></div>
+              <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft"><a class="clients-classic" href="https://nodejs.org/en/about/"
+                target="_blank"><img src="images/clients-9-270x117.png" alt="" width="270" height="117" /></a></div>
               <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft" data-wow-delay=".1s"><a
-                  class="clients-classic" href="#"><img src="images/clients-10-270x117.png" alt="" width="270"
+                  class="clients-classic" href="https://docs.microsoft.com/pt-br/dotnet/csharp/tour-of-csharp/"
+                  target="_blank"><img src="images/clients-10-270x117.png" alt="" width="270"
                     height="117" /></a></div>
               <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft" data-wow-delay=".2s"><a
-                  class="clients-classic" href="#"><img src="images/clients-3-270x117.png" alt="" width="270"
+                  class="clients-classic" href="https://visualstudio.microsoft.com/pt-br/"
+                  target="_blank"><img src="images/clients-3-270x117.png" alt="" width="270"
                     height="117" /></a></div>
               <div class="col-sm-6 col-md-5 col-lg-6 col-xl-3 wow fadeInLeft" data-wow-delay=".3s"><a
-                  class="clients-classic" href="#"><img src="images/clients-11-270x117.png" alt="" width="270"
+                  class="clients-classic" href="https://www.python.org/" 
+                  target="_blank"><img src="images/clients-11-270x117.png" alt="" width="270"
                     height="117" /></a></div>
             </div>
           </div>
@@ -464,7 +467,7 @@
       </div>
     </section>
 
-    <!-- Meet The Team-->
+    <!-- Other section-->
     <section class="section section-sm section-fluid bg-default" id="team">
       <div class="container-fluid">
         <h3>_______________________</h3>
@@ -472,7 +475,7 @@
           <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInRight">
     </section>
 
-    <!-- You dream — we embody-->
+    <!-- Faça mais comigo-->
     <section class="section section-sm bg-default text-md-left">
       <div class="container">
         <div class="row row-50 align-items-center justify-content-center justify-content-xl-between">
@@ -550,7 +553,7 @@
       </div>
     </section>
 
-    <!-- What people Say-->
+    <!-- Start ups-->
     <section class="section section-sm section-bottom-70 section-fluid bg-default">
       <div class="container-fluid">
         <h2>Start-Ups</h2>
