Commit: Alterações de ícones e links

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <li class="rd-navbar-share-list-item"><a class="icon fa fa-instagram" title="Instagram"
                            href="#" target="_blank"></a></li>
 
-                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-facebook" title="Facebook"
+                        <li class="rd-navbar-share-list-item"><a class="icon fa fa-linkedin" title="Facebook"
                            href="https://shre.ink/Pyo" target="_blank"></a></li>
                       </ul>
                     </div>
@@ -402,7 +402,7 @@
       <div class="container">
         <div class="row row-30 row-xl-24 justify-content-center align-items-center align-items-lg-start text-left">
           <div class="col-md-6 col-lg-5 col-xl-4 text-center"><a class="text-img" href="#">
-              <div id="particles-js"></div><span class="counter">10</span>
+              <div id="particles-js"></div><span class="counter">8</span>
             </a></div>
           <div class="col-sm-8 col-md-6 col-lg-5 col-xl-4">
             <div class="text-width-extra-small offset-top-lg-24 wow fadeInUp">
@@ -796,8 +796,10 @@
               <div class="col-sm-6 col-md-4 text-sm-right text-md-center">
                 <div>
                   <ul class="list-inline list-inline-sm footer-social-list-2">
-                    <li><a class="icon fa fa-facebook" href="#"></a></li>
-                    <li><a class="icon fa fa-twitter" href="#"></a></li>
+                    <li><a class="icon fa fa-linkedin" href="http://www.linkedin.com/in/wisley-ribeiro-lopes"
+                      target="_blank"></a></li>
+                    <li><a class="icon fa fa-whatsapp" href="https://abrir.link/UmcBU"
+                      target="_blank"></a></li>
                     <li><a class="icon fa fa-instagram" href="https://www.instagram.com/ribeiro.exe/" 
                       target="_blank"></a></li>
                   </ul>
